Tests/ContributeWordPressTests/Errors/EquatableError.swift
import Foundation

protocol EquatableError: Error, Equatable {

}
